--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "proxy": "http://localhost:8001",
   "private": true,
   "dependencies": {
+    "axios": "^1.3.4",
     "classnames": "^2.2.6",
     "normalize.css": "^8.0.1",
     "react": "^16.9.0",
